fixed email address sizing on smaller mobile devices

--- a/styles.css
+++ b/styles.css
@@ -298,6 +298,7 @@ h4 {
 
 .email {
   text-align: center;
+  font-size: 1.6em;
 }
 
 .contact {
